<resources>
    <string name="app_name">AirGuitar</string>

    <string name="play">\u25b6</string>
    <string name="frew">\u23ee</string>
    <string name="ffwd">\u23ed</string>

    <string name="now_playing">Now playing: [dynamically set by Java]</string>
    <string name="Player">Player</string>
    <string name="Playlist">Playlist</string>
    <string name="Search">Search</string>
    <string name="Lyrics">Lyrics</string>
    <string name="Track">Track title</string>

    <string name="Lyrics_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
        in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="expl_main">This is the main screen from where you access audio controls, Android MediaPlayer class should be used to play audio files</string>
    <string name="expl_lyrics">Believe it or not, no matter how proficient you are, if you are not a native
        speaker sometimes you need lyrics!</string>
    <string name="expl_playlist">This is where you jump from a song to another</string>
    <string name="expl_search">Look up for songs to listen, either locally or remotely</string>

</resources>
