<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.alessio.airguitar.PlaylistActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/dillinger_escape_plan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topbar"
        style="@style/bar.top">

        <TextView
            android:id="@+id/tab_player"
            style="@style/button.text"
            android:text="@string/Player" />

        <TextView
            android:id="@+id/tab_search"
            style="@style/button.text"
            android:text="@string/Search" />

        <TextView
            android:id="@+id/tab_lyrics"
            style="@style/button.text"
            android:text="@string/Lyrics" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/topbar"
                android:orientation="vertical">

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

                <TextView
                    style="@style/placeholder_text.list"
                    android:text="@string/Track" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/player_keypad"
        style="@style/bar.bottom"
        android:layout_alignParentBottom="true">

        <Button
            style="@style/button.player"
            android:text="@string/frew" />

        <Button
            style="@style/button.player"
            android:text="@string/play" />

        <Button
            style="@style/button.player"
            android:text="@string/ffwd" />


    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
